fix: glossary header height on mobile/handling of pagination (ZNTA-1606)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -6154,7 +6154,7 @@ i.i--left.i--lock, i.i--left.i--trash {x
   }
 
   .glossary-list {
-    margin-top:1.5em;
+    margin-top:2em;
   }
 
   .glossaryhead-base {
